# council-discourse

./: .gitignore  AGENTS.md  PLAN.md  STATE.md  pyproject.toml
.claude/: launch.json
.github/workflows/: auto-fix.yml  pipeline.yml  production.yml  watchdog.yml
data/: registry.db
experiments/: 01_fetch_benchmark_data.py  02_scrape_citymeetings_reference.py  03_prepare_texts.py  04_chapter_gemini.py  05_compare_chapters.py  06_gemini_audio_probe.py  07_eval_speaker_naming.py  08_whisper_ceiling.py  09_whisper_eval.py  10_model_matrix.py  11_combined_pass.py  12_cache_probe.py
experiments/briefs/: asr-compare.md  asr-leaders.md  benchmark-harness.md  chapter-granularity.md  diarize-stage.md  edge-chapters.md  fix-naming-singlepass-chapter-granularity.md  homepage-collapse.md  llm-cost-round.md  (+11 more)
pipeline/: __init__.py  artifacts.py  chapterize.py  cli.py  config.py  db.py  diarize.py  discover.py  export_site.py  fetch.py  gemini.py  legistar.py  models.py  prepare.py  production.py  roster.py  runlog.py  speakers.py  stages.py  transcribe.py  utils.py  viebit.py  voxtral_prod.py
research/: 01-citymeetings-site-inventory.md  02-data-sources.md  03-how-citymeetings-was-built.md  04-text-llm-frontier.md  05-asr-frontier.md
site/: astro.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json  wrangler.toml
tests/: test_chapterize.py  test_diarize.py  test_export_site.py  test_gemini_http.py  test_llm_config.py  test_parsers.py  test_production_pipeline.py  test_speakers_label_mapping.py  test_transcribe_voxtral.py  test_voxtral_batch.py
(+90 files in other folders)
