[project]
name = "council-discourse"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "httpx>=0.28.1",
    "json-repair>=0.61.1",
    "mlx-whisper>=0.4.3",
    "parakeet-mlx>=0.5.2",
    "pyannote-audio>=4,<5",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
